# doc_summarizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  domain.py  main.py  models.py  ports.py
app/adapters/: pdf_parser.py  repository.py  summarizer.py
static/: index.html
tests/: test_api.py  test_pdf_parser.py  test_summarizer.py
